[package]
name = "schani_uploader"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
dotenv = "0.8.0"
hyper = "0.10.6"
hyper-openssl = "0.2.6"
multipart = "0.12.0"
oauthcli = "1.0.4"
openssl = "0.9.12"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
serde_json="1.0.2"
serde_urlencoded = "0.5.1"
url = "1.4.0"
